registry3/auth-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth-pod
  labels:
    app: auth
spec:
  containers:
    - name: auth
      image: cesanta/docker_auth:1
      args: ["--v=2", "--alsologtostderr", "/config/auth_config.yml"]
      volumeMounts:
      - name: auth-ssl-volume
        mountPath: "/ssl"
        readOnly: true
      - name: auth-config-volume
        mountPath: "/config"
        readOnly: true
      ports:
        - containerPort: 5001
  volumes:
    - name: auth-ssl-volume
      secret:
        secretName: auth-ssl-server
    - name: auth-config-volume
      secret:
        secretName: auth-config-secret
