registry3/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
    - name: busybox
      image: busybox
      args:
        - sleep
        - "1000"
      volumeMounts:
      - name: auth-ssl-volume
        mountPath: "/ssl"
        readOnly: true

  volumes:
    - name: auth-ssl-volume
      secret:
        secretName: auth-ssl-server
