registry3/registry-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry-pod
  labels:
    app: registry
spec:
  containers:
    - name: registry
      image: registry:2
      ports:
        - containerPort: 5000
      volumeMounts:
        - name: auth-ssl-volume
          mountPath: "/ssl"
          readOnly: true
      volumeDevices:
        - name: registry-data-volume
          devicePath: /var/lib/registry
  volumes:
    - name: registry-data-volume
      persistentVolumeClaim:
        claimName: registry-data-pvc
    - name: auth-ssl-volume
      secret:
        secretName: auth-ssl-server
