registry3/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - protocol: TCP
      name: auth
      port: 5001
      targetPort: 5001
