registry3/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - protocol: TCP
      name: registry
      port: 80
      targetPort: 5000
