registry3/registry-ingress-managed.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: registry-ip-address
    networking.gke.io/managed-certificates: registry-certificate

spec:
  backend:
    serviceName: registry
    servicePort: 5000
