registry3/registry-managed-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: registryipaddress
    networking.gke.io/managed-certificates: registry-certificate

spec:
  backend:
    serviceName: registry-service
    servicePort: 80
